--- a/Engine/Input/Input.vcproj
+++ b/Engine/Input/Input.vcproj
@@ -40,6 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories=""
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -60,6 +61,8 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="SDLmain.lib SDL.lib"
+				AdditionalLibraryDirectories=""
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -120,6 +123,7 @@
 			/>
 			<Tool
 				Name="VCLibrarianTool"
+				AdditionalDependencies="SDLmain.lib SDL.lib"
 			/>
 			<Tool
 				Name="VCALinkTool"
@@ -147,6 +151,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\CEvent.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Device.cpp"
 				>
 			</File>
@@ -164,6 +172,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\CEvent.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Device.h"
 				>
