--- a/Engine/Window/Window.vcproj
+++ b/Engine/Window/Window.vcproj
@@ -147,6 +147,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\SDLWindow.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Window.cpp"
 				>
 			</File>
@@ -156,6 +160,10 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\SDLWindow.h"
+				>
+			</File>
 			<File
 				RelativePath=".\Window.h"
 				>
