Terrain class flexibility: Added visual debugging.
Added test class for Terrain.
Lua interfaces

--- a/Engine/Development/Development.vcproj
+++ b/Engine/Development/Development.vcproj
@@ -178,6 +178,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\ExposeTest.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\Main.cpp"
 				>
 			</File>
@@ -201,12 +205,20 @@
 					/>
 				</FileConfiguration>
 			</File>
+			<File
+				RelativePath=".\TerrainTest.cpp"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
+			<File
+				RelativePath=".\ExposeTest.h"
+				>
+			</File>
 			<File
 				RelativePath=".\ModelTest.h"
 				>
@@ -217,6 +229,10 @@
 			</File>
 			<File
 				RelativePath=".\sceneGraphTest.h"
+				>
+			</File>
+			<File
+				RelativePath=".\TerrainTest.h"
 				>
 			</File>
 		</Filter>
