-Color and normal map for terrain are now mapped to vertices instead of a texture in shader.
-Skybox works again.
-Added irrKlang sound engine.

--- a/Engine/Resources/Resources.vcproj
+++ b/Engine/Resources/Resources.vcproj
@@ -306,6 +306,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\Development\Content\Shaders\Skybox.fx"
+				>
+			</File>
+			<File
 				RelativePath="..\Development\Content\Shaders\TerrainShaderNew.fx"
 				>
 			</File>
