--- a/Engine/Development/Development.vcproj
+++ b/Engine/Development/Development.vcproj
@@ -40,7 +40,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../Content"
+				AdditionalIncludeDirectories="&quot;D:\Program Files (x86)\irrKlang-1.3.0\include&quot;;../../Content"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -61,8 +61,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib winmm.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib winmm.lib irrKlang.lib"
 				LinkIncremental="2"
+				AdditionalLibraryDirectories="&quot;D:\Program Files (x86)\irrKlang-1.3.0\lib\Win32-visualStudio&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				TargetMachine="1"
