--- a/Engine/Development/Development.vcproj
+++ b/Engine/Development/Development.vcproj
@@ -118,7 +118,7 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				AdditionalIncludeDirectories="../../Content"
+				AdditionalIncludeDirectories="&quot;D:\Program Files (x86)\irrKlang-1.3.0\include&quot;;../../Content"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
 				UsePrecompiledHeader="0"
@@ -137,8 +137,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib winmm.lib"
+				AdditionalDependencies="d3d9.lib d3dx9.lib dinput8.lib winmm.lib irrKlang.lib"
 				LinkIncremental="1"
+				AdditionalLibraryDirectories="&quot;D:\Program Files (x86)\irrKlang-1.3.0\lib\Win32-visualStudio&quot;"
 				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
@@ -174,44 +175,6 @@
 	<References>
 	</References>
 	<Files>
-		<Filter
-			Name="Source Files"
-			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
-			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
-			>
-			<File
-				RelativePath=".\ExposeTest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\Main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\ModelTest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\RTStest.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\scenegraphTest.cpp"
-				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="true"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\TerrainTest.cpp"
-				>
-			</File>
-		</Filter>
 		<Filter
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
@@ -249,6 +212,44 @@
 			</File>
 			<File
 				RelativePath=".\icon.ico"
+				>
+			</File>
+		</Filter>
+		<Filter
+			Name="Source Files"
+			Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
+			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
+			>
+			<File
+				RelativePath=".\ExposeTest.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\Main.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\ModelTest.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\RTStest.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\scenegraphTest.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\TerrainTest.cpp"
 				>
 			</File>
 		</Filter>
